--- a/mobile_app/app/build.gradle
+++ b/mobile_app/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "nucleus.eti.br.bottombarnavigationview"
+        applicationId "hash.application"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 repositories {
