--- a/mobile_app/app/build.gradle
+++ b/mobile_app/app/build.gradle
@@ -8,10 +8,11 @@ android {
     defaultConfig {
         applicationId "hash.application"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -28,28 +29,23 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.android.support:support-v4:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.github.kittinunf.fuel:fuel:1.12.1' //for JVM
-    compile 'com.github.kittinunf.fuel:fuel-android:1.12.1' //for Android
-    compile 'com.github.kittinunf.fuel:fuel-livedata:1.12.1' //for LiveData support
-    compile 'com.github.kittinunf.fuel:fuel-rxjava:1.12.1' //for RxJava support
-    compile 'com.github.kittinunf.fuel:fuel-gson:1.12.1' //for Gson support
-    compile 'com.github.kittinunf.fuel:fuel-jackson:1.12.1' //for Jackson support
-    compile 'com.github.kittinunf.fuel:fuel-moshi:1.12.1' //for Moshi support
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
 
 repositories {
     mavenCentral()
     jcenter()
+    maven { url "https://jitpack.io" }
 }
