--- a/mobile_app/app/src/main/AndroidManifest.xml
+++ b/mobile_app/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +21,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ViewDish"
+            android:name=".activities.ViewDish"
             android:label="@string/app_name" />
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".AddRecipeActivity"></activity>
+        <activity android:name=".activities.SearchActivity" />
+        <activity android:name=".activities.AddRecipeActivity"></activity>
     </application>
 
 </manifest>
