--- a/mobile_app/app/src/main/AndroidManifest.xml
+++ b/mobile_app/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             android:label="@string/app_name" />
         <activity android:name=".activities.SearchActivity" />
         <activity android:name=".activities.AddRecipeActivity"></activity>
+        <activity android:name=".activities.LoginActivity"/>
+        <activity android:name=".activities.SignupActivity"/>
     </application>
 
 </manifest>
