--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
       before_script:
         - cd server_app
       install:
-        - pip install -r requirements.txt  
+        - pip install -r server_app/requirements.txt  
       script:
         - pytest
 
