--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,20 @@ matrix:
   include:
     - language: python
       python: 3.5.2
+      before_install:
+        - sudo update-java-alternatives -s java-8-oracle
+        - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
+        - java -version
+        - sudo rm -rf /var/lib/cassandra/*
+        - wget http://apache.cs.utah.edu/cassandra/3.11.2/apache-cassandra-3.11.2-bin.tar.gz  && tar -xvzf apache-cassandra-3.11.2-bin.tar.gz
+        - sudo sh ./apache-cassandra-3.11.2/bin/cassandra -R
+        - sleep 20
+      install:
+        - pip install -r server_app/requirements.txt
       before_script:
         - cd server_app
-      install:
-        - pip install -r server_app/requirements.txt  
       script:
-        - pytest
+        #- pytest
 
     - language: android
       jdk: oraclejdk8
