--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ matrix:
       before_script:
         - cd server_app
         - python -V
+        - python test/initCasasndra.py
         # need to initalize database for testing
       script:
-        #- python user_manager_test.py
+        - python test/user_manager_test.py
 
     - language: android
       jdk: oraclejdk8
